# wic

./: CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  config.h.in  version.rc.in
client/include/: about.h  client.h  common.h  main_window.h  mainwindow.h  program_setup.h  sender_thread.h
client/res/: resources.qrc  resources.rc  wic_client_icon.icns
client/src/: about.cpp  about.ui  client.cpp  common.cpp  main.cpp  main_window.cpp  main_window.ui  mainwindow.cpp  mainwindow.ui  program_setup.cpp  sender_thread.cpp
server/: CMakeLists.txt  config.h.in  version.rc.in
server/include/: about.h  common.h  main_window.h  mainwindow.h  program_setup.h  server.h
server/res/: resources.qrc  resources.rc  wic_server_icon.icns
server/src/: about.cpp  about.ui  common.cpp  main.cpp  main_window.cpp  main_window.ui  mainwindow.cpp  mainwindow.ui  program_setup.cpp  server.cpp
